link html pages to index.html, creation of media query, more experimentation with flexbox

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,19 +44,19 @@ header{
     height: 100px;
     width: 100px;
     display: flex;
-    flex-wrap: center;
+    flex-direction: center;
     text-align: center;
     align-items: center;
 }
 
 
 nav a{
-    text-decoration: underline overline;
+    text-decoration: overline;
     background-color:white;
     color: black;  
-    padding: 1.5rem;
-    border: 0.5rem;
-    margin-left: 0.5rem;
+    padding: 0.7rem;
+    border-top: 0.5rem;
+    margin-left: 2rem;
     margin-right: 0.5rem;
     border-radius: 20%;
 }
@@ -70,7 +70,7 @@ h1:hover{
 }
 
 nav a:hover{
-background-color: whitesmoke;
+background-color: grey;
 color: black;
 animation: spin 2s inifinite linear;
 }
@@ -90,4 +90,32 @@ animation: spin 2s inifinite linear;
 .legume-type img{
     width: 400px;
     height: 400px;
+    /* display: flex; 
+    flex-direction: column;*/
+}
+
+@media screen and (min-width: 600px){
+    main{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: space-around;
+        text-align: center;
+        align-items: center;
+
+    nav a {
+        font-size: 1.5rem;
+    }
+
+    .legume-type{
+        margin-top: 5dvw;
+    }
+
+    .legume-type img{
+        width: 400px;
+        height: 400px;
+        /* display: flex; 
+        flex-direction: column;*/
+    }
+   
 }
