--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,121 +1,120 @@
-*{
-    --dutch-white:#EEDFB7;
-    --sticky-note: #FAF9F6;
-    color:tan:
+* {
+  --dutch-white: #eedfb7;
+  --sticky-note: #faf9f6;
+  color: tan;
 }
 
-body{
-    background-color: var(--dutch-white);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
+body {
+  background-color: var(--dutch-white);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
 }
 
-header{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
+header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
 }
 
-.logo{
-    height: 200px;
-    width: 200px;
-    background-color: var(--sticky-note);
+.logo {
+  height: 200px;
+  width: 200px;
+  background-color: var(--sticky-note);
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border: double gray 25px;
+  border-radius: 50%;
+}
+
+.logo p {
+  background-color: black;
+  color: var(--dutch-white);
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  border-radius: 20%;
+}
+
+nav {
     display: flex;
     justify-content: center;
-    text-align: center;
-    align-items: center;
-    border: double gray 25px;
-    border-radius: 50%;
 }
 
-.logo p{
-    background-color: black;
-    color: var(--dutch-white);
-    font-size: 1.5rem;
-    padding: 1.5rem;
-    border-radius: 20%;
-}
-
-.img{
-    height: 100px;
-    width: 100px;
-    display: flex;
-    flex-direction: center;
-    text-align: center;
-    align-items: center;
-}
-
-
-nav a{
-    text-decoration: overline;
-    background-color:white;
-    color: black;  
-    padding: 0.7rem;
-    border-top: 0.5rem;
-    margin-left: 2rem;
-    margin-right: 0.5rem;
-    border-radius: 20%;
+nav a {
+  text-decoration: overline;
+  background-color: white;
+  color: black;
+  padding: 0.7rem;
+  border-top: 0.5rem;
+  margin-left: 2rem;
+  margin-right: 0.5rem;
+  border-radius: 20%;
 }
 
 /* @keyframes spin{ 
     
 }*/
 
-h1:hover{
-    animation: spin 1s infinite linear;
+h1:hover {
+  animation: spin 1s infinite linear;
 }
 
-nav a:hover{
-background-color: grey;
-color: black;
-animation: spin 2s inifinite linear;
+nav a:hover {
+  background-color: grey;
+  color: black;
+  animation: spin 2s inifinite linear;
 }
 
-.legume-type{
+.legume-type {
+  margin-top: 15dvw;
+  background-color: coral;
+  padding: 1rem;
+  border-radius: 5%;
+  width: 75dvw;
+}
+
+.legume-type img {
+  width: 75dvw;
+  height: 75dvw;
+  border-radius: 5%;
+  /* display: flex; 
+    flex-direction: column;*/
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+  }
+
+  nav a {
+    font-size: 1rem;
+
+  }
+  .legume-type {
     margin-top: 15dvw;
     background-color: coral;
     padding: 1rem;
     border-radius: 5%;
-}
-
-.legume-type{
-    width: 75dvw;
+    width: 30dvw;
+    height: 30dvw;
+  }
+  
+  .legume-type img {
+    width: 30dvw;
+    height: 30dvw;
     border-radius: 5%;
-}
-
-.legume-type img{
-    width: 400px;
-    height: 400px;
     /* display: flex; 
-    flex-direction: column;*/
-}
-
-@media screen and (min-width: 600px){
-    main{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: space-around;
-        text-align: center;
-        align-items: center;
-
-    nav a {
-        font-size: 1.5rem;
-    }
-
-    .legume-type{
-        margin-top: 5dvw;
-    }
-
-    .legume-type img{
-        width: 400px;
-        height: 400px;
-        /* display: flex; 
-        flex-direction: column;*/
-    }
-   
+      flex-direction: column;*/
+  }
+  
 }
